--- a/client/src/form/PostForm.css
+++ b/client/src/form/PostForm.css
@@ -26,3 +26,11 @@ form {
 .MuiButton-root:last-child {
     margin-top: 10px;
 }
+
+@media (max-width: 768px) {
+    form {
+        min-width: 100%;
+        max-width: 100%;
+        padding: 15px;
+    }
+}
